# duckdb-chess

./: .cliffignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  cliff.toml  justfile  test_chess.sql  test_direct.sql
.cargo/: config.toml
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: MainDistributionPipeline.yml  ci.yml  release.yml
openspec/: config.yaml  project.md
openspec/changes/migrate-integration-tests-to-rust/: design.md  proposal.md  tasks.md
openspec/specs/allocation-efficiency/: spec.md
openspec/specs/annotation-filtering/: spec.md
openspec/specs/build-system/: spec.md
openspec/specs/code-structure/: spec.md
src/: filter.rs  lib.rs  reader.rs  visitor.rs  wasm_lib.rs
src/chess/: duckdb_string.rs  error.rs  filter.rs  log.rs  mod.rs  moves.rs  reader.rs  scalar.rs  timecontrol.rs  types.rs  visitor.rs
src/chess/duckdb/: mod.rs  (+3 more)
test/pgn_files/: bad_utf8_real.pgn  date_day_overflow.pgn  date_time_fallback.pgn  game1.pgn  game1.pgn.zst  game2.pgn  game2.pgn.zst  invalid_types.pgn  malformed.pgn  nulls.pgn  parse_errors.pgn  parser_stage_error.pgn  parser_stage_valid.pgn  partial_dates.pgn  sample.pgn  sample.pgn.zst
test/sql/: chess_fen_epd.test  chess_moves_hash.test  chess_moves_json.test  chess_moves_normalize.test  chess_moves_normalize_column.test  chess_moves_subset.test  chess_ply_count.test  chess_timecontrol.test  filter_movetext_annotations.test  filter_movetext_column.test  moves_json.test  read_pgn.test  read_pgn_bad_utf8_real.test  read_pgn_date_day_overflow.test  read_pgn_errors.test  read_pgn_glob.test  read_pgn_nulls.test  read_pgn_parse_errors.test  read_pgn_partial_dates.test  read_pgn_type_conversions.test  read_pgn_zstd.test
(+202 files in other folders)
