[package]
name = "chess"
version = "0.1.2"
edition = "2024"
rust-version = "1.89"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[dependencies]
duckdb = { version = "=1.4.4", features = ["vtab-loadable", "vscalar"] }
duckdb-ext-macros = "0.1.0"
libduckdb-sys = { version = "=1.4.4", features = ["loadable-extension"] }
pgn-reader = "0.28"
shakmaty = "0.29"
glob = "0.3"
